2012-12-02  Dirk Pranke  <dpranke@chromium.org>

        nrwt: clean up logic for retrying failed tests a bit
        https://bugs.webkit.org/show_bug.cgi?id=103829

        Reviewed by Ojan Vafai.

        The code for determining when to retry test failures and
        show the results.html file was awkward and could stand some
        cleaning up. This patch should have no functional changes.

        The routine called _get_failures() returned a dict of test names
        to failure types, but we only ever used the names, so I've converted
        it to return a list (and renamed it); also, the show_results_html()
        file was calling that routine to figure out if anything failed, when
        the information was already in the result_summary (as either
        unexpected_results or total_failures), so we were doing unnecessary work.

        * Scripts/webkitpy/layout_tests/controllers/manager.py:
        (Manager.__init__):
        (Manager.run):
        (Manager._run_tests):
        (Manager._failed_test_names):
        (Manager._copy_results_html_file):

2012-12-02  Dirk Pranke  <dpranke@chromium.org>

        nrwt: remove unused methods in manager.py
        https://bugs.webkit.org/show_bug.cgi?id=103828

        Reviewed by Eric Seidel.

        These two methods weren't being called by anything and were no
        longer needed.

        * Scripts/webkitpy/layout_tests/controllers/manager.py:
        (Manager._get_failures):
        (Manager._upload_json_files):

2012-12-02  Laszlo Gombos  <l.gombos@samsung.com>

        Correct the spelling of the cmakeargs argument
        https://bugs.webkit.org/show_bug.cgi?id=103814

        Reviewed by Darin Adler.

        The script expects cmakeargs (plural), so lets get the
        documentation of the script report the same.

        * Scripts/build-webkit:

2012-12-02  Mike West  <mkwst@chromium.org>

        [gtk] Enable the CSP_NEXT runtime flag.
        https://bugs.webkit.org/show_bug.cgi?id=103810
